# Vista-Tracker

./: .gitignore  README.md  requirements.txt  run.sh
config/: base.yaml  config.yaml
config/scenarios/: buildings.yaml  corridor.yaml  go_around.yaml  open_field.yaml  straight_slow.yaml  urban_block.yaml  wall_corridor.yaml  wall_gap.yaml
cpp/: CMakeLists.txt
cpp/include/config/: Config.hpp  ConfigLoader.hpp
cpp/include/control/: IController.hpp  PID.hpp  PIDController.hpp
cpp/include/controllers/: IController.hpp  PID.hpp  PIDController.hpp
cpp/include/estimation/: ITargetEstimator.hpp  PerfectEstimator.hpp
cpp/include/mapping/: FakeESDFMap.hpp  IESDFMap.hpp
cpp/include/models/: ControlCommand.hpp  DepthImage.hpp  Detection.hpp  RGBImage.hpp  Reference.hpp  SensorData.hpp  State.hpp  TargetEstimate.hpp  TargetState.hpp  TargetTrajectory.hpp  Waypoint.hpp
cpp/include/perception/: GroundTruthPerception.hpp  IPerception.hpp
cpp/include/planning/: IPlanner.hpp  RRT.hpp  RRTPIDPlanner.hpp  SimplePlanner.hpp  TrajectoryPlanner.hpp
cpp/include/sensing/: CameraModel.hpp
cpp/include/sim/: ISimulator.hpp
cpp/include/sim_impl/: KinematicSim.hpp  WaypointFollower.hpp
cpp/include/simulation/: Simulator.hpp
cpp/include/world/: Grid.hpp  Obstacle.hpp  World.hpp
cpp/src/: main.cpp
cpp/src/config/: ConfigLoader.cpp
cpp/src/control/: PIDController.cpp
cpp/src/controllers/: PID.cpp  PIDController.cpp
cpp/src/estimation/: PerfectEstimator.cpp
cpp/src/mapping/: FakeESDFMap.cpp
cpp/src/perception/: GroundTruthPerception.cpp
cpp/src/planning/: RRT.cpp  RRTPIDPlanner.cpp  SimplePlanner.cpp
cpp/src/sim_impl/: KinematicSim.cpp  WaypointFollower.cpp
cpp/src/simulation/: Simulator.cpp
cpp/tests/: test_config_loader.cpp  test_kinematic_sim.cpp  test_pid_controller.cpp  test_waypoint_follower.cpp
cpp/tests/fixtures/: base.yaml  override_kp.yaml  standalone.yaml  world_with_obstacle.yaml
data/: trajectory.csv
python/: visualize.py  visualize_3d_fpv.py  visualize_ego.py
scripts/: run.sh  run_3d.sh  run_all.sh  tune_pid.py  tune_pid_sine_tracking.py  tune_rrt.py
